added tweet function

--- a/style.css
+++ b/style.css
@@ -19,6 +19,9 @@ h1 {
     display: flex;
     justify-content: center;
     margin-top: 35px;
+    /* background-color: white;
+    width: 50%;
+    height: 30%; */
 }
 
 button {
@@ -28,3 +31,4 @@ button {
     margin: 0 auto;
     display: block;
 }
+
