--- a/style.css
+++ b/style.css
@@ -15,20 +15,26 @@ h1 {
     margin-top: 300px;
 }
 
-#quoteHere {
+button {
+    display: flex;
+    width: 100px;
+    margin: 0 auto;
+    flex-direction: row;
+    text-align: center;
+}
+
+
+#quoteDisplay {
     display: flex;
     justify-content: center;
-    margin-top: 35px;
+}
+
+
+/* #quoteHere {
+    display: flex;
+    justify-content: center;
+    margin-top: 35px; */
     /* background-color: white;
     width: 50%;
     height: 30%; */
-}
-
-button {
-    /* display: flex;
-    justify-content: center; */
-    font-size: 15px;
-    margin: 0 auto;
-    display: block;
-}
-
+/* } */
