--- a/style.css
+++ b/style.css
@@ -15,18 +15,23 @@ h1 {
     margin-top: 300px;
 }
 
-button {
-    display: flex;
-    width: 100px;
-    margin: 0 auto;
-    flex-direction: row;
-    text-align: center;
-}
-
 
 #quoteDisplay {
     display: flex;
     justify-content: center;
+    margin: auto;
+    width: 50%;
+}
+
+button {
+    width: 100px;
+    margin-right: 10px;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    padding: 20px;
 }
 
 
